@@ -88,6 +88,11 @@
 	<LI>Eliminated a common cause of "table too wide"
 	formatting errors,
 
+	<LI>Fixed a bug when applying a table background color to
+	a cell without a border that cross a page boundary.
+
+	<LI>Fixed some calls to strcpy with overlapping arguments.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
